# understatus

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  publish-crates.yml  publish-npm.yml  release.yml
docs/: design-lab.html
docs/superpowers/plans/: 2026-06-04-flashy-themes.md  2026-06-08-cmux-native-status-pills-plan.md
docs/superpowers/specs/: 2026-06-03-themes-and-interval-design.md  2026-06-04-flashy-themes-design.md  2026-06-05-lterm-statusline-integration-design.md  2026-06-06-codex-session-deep-read-design.md  2026-06-08-cmux-native-status-pills-design.md
homebrew/: README.md  understatus.rb
npm/: README.md  checksums.json  install.js  package.json  test-install.js  test-verify-release.js  verify-release.js
src/: chain.rs  claude.rs  codex.rs  config.rs  install.rs  main.rs  render.rs  system.rs  theme.rs  themes.rs
tests/: oneline.rs
tests/fixtures/: claude_full.json  claude_min.json  claude_null_context.json
